[package]
name = "in-mem-kv-store"
version = "0.1.0"
authors = ["Janu (Janeshwar) Cambrelen <janu.cambrelen@gmail.com>"]
edition = "2021"
description = "A thread-safe key-value store, implemented in Rust with zero dependencies, that supports keys and values of different types within the same store."
repository = "https://github.com/janu-cambrelen/in-memory-key-value-store"
keywords = ["hashmap", "key-value", "thread-safe", "in-memory"]
license = "MIT"

[dependencies]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "in_mem_kv_bench"
harness = false
